--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
     <section id="intro">
         <main class="container">
-            <div>
+            <header>
                 <img src="assets/Avatar.png" alt="">
                 <div>
                     <p class="text-subtitle">Hello World! Meu nome é <span class="red">Martina Santos</span> e sou</p>
                     <h1>Desenvolvedora Fullstack</h1>
                     <p class="text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
                 </div>
-            </div>
+            </header>
             <div id="tags">
                 <span>
                     <img src="assets/GitHub.png" alt="">
@@ -53,6 +53,119 @@
             </div>
         </main>
         <img src="assets/icons/CaretDoubleDown.png" alt="">
+    </section>
+    <section id="project">
+        <main class="container">
+            <header>
+                <p class="text-subtitle red">Meu trabalho</p>
+                <h2>Veja os projetos em destaque</h2>
+            </header>
+
+            <div id="grid" class="display-grid gap-24">
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-01.png" alt="">
+                    <div>
+                        <h3>Travelgram</h3>
+                        <p class="text-sm">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-02.png" alt="">
+                    <div>
+                        <h3>Tech News</h3>
+                        <p class="text-sm">Homepage de um portal de notícias sobre a área de tecnologia</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-03.png" alt="">
+                    <div>
+                        <h3>Página de receita</h3>
+                        <p class="text-sm">Página com o passo a passo de uma receita para cupcakes</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-04.png" alt="">
+                    <div>
+                        <h3>Zingen</h3>
+                        <p class="text-sm">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-05.png" alt="">
+                    <div>
+                        <h3>Refund</h3>
+                        <p class="text-sm">Um sistema para pedido e acompanhamento de reembolso </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Thumbnail_Project-06.png" alt="">
+                    <div>
+                        <h3>Página de turismo</h3>
+                        <p class="text-sm">Página com as principais informações para quem quer viajar para Busan</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </section>
+    <section id="services">
+        <main class="container">
+            <header>
+                <p class="text-subtitle red">Meus servicos</p>
+                <h2>Como posso ajudar o seu negócio</h2>
+            </header>
+            <div>
+                <div class="card">
+                    <img src="assets/images/Devices.png" alt="">
+                    <div>
+                        <h3>Websites e Aplicativos</h3>
+                        <p class="text-sm">Desenvolvimento de interfaces</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/HardDrives.png" alt="">
+                    <div>
+                        <h3>Websites e Aplicativos</h3>
+                        <p class="text-sm">Desenvolvimento de interfaces</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Infinity.png" alt="">
+                    <div>
+                        <h3>Websites e Aplicativos</h3>
+                        <p class="text-sm">Desenvolvimento de interfaces</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </section>
+    <section id="contact">
+        <header>
+            <p class="text-subtitle red">Contato</p>
+            <h2>Gostou do meu trabalho? </h2>
+            <p class="text-sm">Entre em contato ou acompanhe as minhas redes sociais!</p>
+        </header>
+        <div>
+            <a href="#">
+                <img src="assets/icons/LinkedinLogo.svg" alt="">
+                <span>Linkedin</span>
+                <img src="assets/icons/ArrowUpRight-blue.png" alt="">
+            </a>
+            <a href="#">
+                <img src="assets/icons/InstagramLogo.png" alt="">
+                <span>Instagram</span>
+                <img src="assets/icons/ArrowUpRight-blue.png" alt="">
+            </a>
+            <a href="#">
+                <img src="assets/icons/GithubLogo.png" alt="">
+                <span>GitHub</span>
+                <img src="assets/icons/ArrowUpRight-blue.png" alt="">
+            </a>
+            <a href="#">
+                <img src="assets/icons/EnvelopeSimple.png" alt="">
+                <span>E-mail</span>
+                <img src="assets/icons/ArrowUpRight-blue.png" alt="">
+            </a>
+        </div>
     </section>
 </body>
 </html>
